istio-day2/1-understand-istio/labs/05/purchase-history-v1-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purchase-history-v1-canary
  labels:
    app: purchase-history-v1
spec:
  replicas: 1
  selector:
    matchLabels:
        app: purchase-history
        version: v1
  template:
    metadata:
      labels:
        app: purchase-history
        version: v1
      annotations:
    spec:
      serviceAccountName: purchase-history    
      containers:
      - name: purchase-history
        image: nicholasjackson/fake-service:v0.7.8
        ports:
        - containerPort: 8080
